修改多线程例子位置